--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/session-4/text.css
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/session-4/text.css
@@ -1,3 +1,7 @@
+body{
+    background-color: orange;
+}
+
 h2{
     text-align: center;
 }
@@ -6,6 +10,12 @@ h2{
     color: blue;
     text-align: center;
     text-transform: capitalize;
+    direction: rtl;
+    unicode-bidi: bidi-override;
+    column-count: 3;
+    column-rule: 3px solid blue;
+    -webkit-column-count: 3;
+    -moz-column-rule: 3px solid blue;
 
 }
 
@@ -13,6 +23,10 @@ h2{
     color: rgba(255, 0, 0, 1);
     text-align: right;
     text-transform: lowercase;
+    direction: rtl;
+    text-shadow: 3px 3px 5px red;
+    background-color: rgba(9, 9, 9, 0.202);
+    
     
 
 }
@@ -28,16 +42,23 @@ h2{
     color: hsl(0, 100%, 50%);
     text-decoration: underline;
     text-indent: 2rem;
+    letter-spacing: 10px;
+    line-height: 1rem;
+    font-family: 'Yellowtail', cursive;
+
 
 }
 
 #par5{
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
+    word-spacing: 1rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Yellowtail', cursive;
 
 }
 
 #span1{
     color: fuchsia;
     text-decoration: overline wavy blue;
-}
 
+}
