--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc07_combinators-outline-practices/css/3-practice-site.css
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc07_combinators-outline-practices/css/3-practice-site.css
@@ -10,6 +10,7 @@ body {
 
 /** NAV-TOP */
 nav.nav-top {
+  padding: 1rem;
   background-image: linear-gradient(
     to right,
     rgb(119, 99, 99),
@@ -19,6 +20,9 @@ nav.nav-top {
 
 nav.nav-top img {
   width: 50px;
+  border: 1px solid rgb(167, 24, 24);
+  outline: 3px solid red;
+  outline-offset: 3px;
 }
 
 .nav-top .sign-in {
@@ -43,3 +47,47 @@ nav.nav-top img {
 
 /** NAV-MAIN */
 
+.nav-main {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  background-color: #ffaa53;
+  padding: 2rem;
+  text-align: center;
+  font-size: 1.1rem;
+  font-family: "DynaPuff", cursive;
+}
+
+.nav-main a {
+  text-decoration: none;
+  margin-right: 2rem;
+  color: black;
+}
+
+.nav-main a:hover {
+  color: white;
+}
+
+main {
+  padding: 2rem;
+  text-align: justify;
+}
+
+.slack {
+  position: fixed;
+  bottom: 2rem;
+  right: 3rem;
+  background-color: red;
+  font-size: 2rem;
+  color: white;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  text-align: center;
+  padding: 0.2rem;
+}
+
+.slack i:hover {
+  color: black;
+  font-weight: 600;
+}
