--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc12_sass-intro/basic-example/style.scss
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc12_sass-intro/basic-example/style.scss
@@ -13,7 +13,7 @@ $fontColor: white;
 $navBgColor: #30a7c3;
 $fontFamily: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 $bannerBgColor: hotpink;
-$myBorder: 
+$myBorder: 2px solid brown;
 
 //********************************************/
 //* Variable Usage
@@ -31,8 +31,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem;
   img {
     width: 80px;
+    border: $myBorder;
+    border-radius: 10px;
   }
   ul {
     list-style-type: none;
@@ -48,5 +51,34 @@ header {
   a {
     color: $fontColor;
     text-decoration: none;
+  }
+}
+
+//*******  BANNER *********/
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $bannerBgColor;
+  padding: 1rem;
+  line-height: 2rem;
+  aside {
+    button {
+      padding: 0.5rem;
+      border: none;
+      border-radius: 5px;
+      background-color: $navBgColor;
+      margin-top: 1rem;
+      margin-right: 0.5rem;
+      &:hover {
+        background-color: pink;
+        cursor: pointer;
+      }
+    }
+  }
+  img {
+    width: 30%;
+    min-width: 250px;
+    max-width: 400px;
   }
 }
