--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc12_sass-intro/basic-example/style.css
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc12_sass-intro/basic-example/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  background-color: #30a7c3;
+  background-color: #30A7C3;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -50,7 +50,7 @@ header a {
   padding: 0.5rem;
   border: none;
   border-radius: 5px;
-  background-color: #30a7c3;
+  background-color: #30A7C3;
   margin-top: 1rem;
   margin-right: 0.5rem;
 }
@@ -62,6 +62,44 @@ header a {
   width: 30%;
   min-width: 250px;
   max-width: 400px;
+}
+
+.cards {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.8rem;
+}
+.cards .card1 {
+  background-color: green;
+  color: white;
+  width: 25%;
+  height: 15rem;
+  border: 2px solid brown;
+  border-radius: 5px;
+}
+.cards .card2 {
+  background-color: brown;
+  color: white;
+  width: 25%;
+  height: 15rem;
+  border: 2px solid brown;
+  border-radius: 5px;
+}
+.cards .card3 {
+  background-color: yellow;
+  color: black;
+  width: 25%;
+  height: 15rem;
+  border: 2px solid brown;
+  border-radius: 5px;
+}
+.cards .card4 {
+  background-color: rgb(40, 33, 56);
+  color: white;
+  width: 25%;
+  height: 15rem;
+  border: 2px solid brown;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
