--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc12_sass-intro/basic-example/style.scss
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc12_sass-intro/basic-example/style.scss
@@ -10,7 +10,7 @@
 $bgColor: pink;
 $fontSize: 1.2rem;
 $fontColor: white;
-$navBgColor: #30a7c3;
+$navBgColor: #30A7C3;
 $fontFamily: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 $bannerBgColor: hotpink;
 $myBorder: 2px solid brown;
@@ -82,3 +82,41 @@ header {
     max-width: 400px;
   }
 }
+
+//*******  CARDS  *********/
+//*****************
+//! @MIXIN
+//*****************
+
+@mixin myBox($backColor, $color) {
+  background-color: $backColor;
+  color: $color;
+  width: 25%;
+  height: 15rem;
+  border: $myBorder;
+  border-radius: 5px;
+}
+
+.cards {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.8rem;
+  .card1 {
+    @include myBox(green, white);
+  }
+  .card2 {
+    @include myBox(brown, white);
+  }
+  .card3 {
+    @include myBox(yellow, black);
+  }
+  .card4 {
+    @include myBox(rgb(40, 33, 56), white);
+  }
+}
+
+//*******  ARTICLES *********/
+
+//*****************
+//! @EXTEND
+//*****************
