--- a/clarusway-full-stack-tr-12-22/html-css/class-notes/hc15-16_bootstrap-project/css/app.css
+++ b/clarusway-full-stack-tr-12-22/html-css/class-notes/hc15-16_bootstrap-project/css/app.css
@@ -1,22 +1,21 @@
-/*! -------------- 1- NAVBAR ---------------- */
 :root {
-  --red: #DC3545;
+  --red: #dc3545;
 }
 
-.navbar{
+/*! -------------- 1- NAVBAR ---------------- */
+.navbar {
   font-size: 1.2rem;
   text-transform: uppercase;
   font-weight: 600;
-
 }
-.nav-link{
-  
+.nav-link {
+  color: black;
+  transition: color 0.5s;
 }
-.nav-link:hover{
+.nav-link:hover {
   color: var(--red);
-
-
 }
+
 /*! ------------- 2- CAROUSEL --------------- */
 
 /*! ------------ 3- ABOUT SECTION ----------- */
