--- a/clarusway-full-stack-tr-12-22/react/class-notes/rc23_Fire-contact/fire_contact_project_solution/src/index.css
+++ b/clarusway-full-stack-tr-12-22/react/class-notes/rc23_Fire-contact/fire_contact_project_solution/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Girassol&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Girassol&display=swap");
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -13,7 +13,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -22,7 +22,7 @@ code {
   display: flex;
   justify-content: space-evenly;
   min-height: 100vh;
-  background-image: url('https://picsum.photos/1600/900');
+  background-image: url("https://picsum.photos/1600/900");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -57,7 +57,7 @@ code {
 .header {
   text-decoration: none;
   font-size: 1.5rem;
-  font-family: 'Girassol', cursive;
+  font-family: "Girassol", cursive;
 }
 
 .design {
