--- a/clarusway-full-stack-tr-12-22/django/class-notes/021_Templates/students/templates/students/home.html
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/021_Templates/students/templates/students/home.html
@@ -8,6 +8,42 @@
 </head>
 <body>
     <h1>Hello this is home page.....</h1>
-    <p>{{ title }}</p>
+    <h2>{{ title }}</h2>
+    <p>{{ desc }}</p>
+    <p>{{ number }}</p>
+    <hr>
+    <p>{{ list1 }}</p>
+    <p>{{ list1.1 }}</p>
+    <p>{{ list1.3.1 }}</p> 
+    <hr>
+    <p>{{ dict1}}</p>
+    <p>{{ dict1.key1 }}</p>
+    <hr>
+    <ul>
+        {% for i in list1 %}
+        <li>{{ i }}</li>
+        {% endfor %}
+    </ul>
+
+    <hr>
+        {% if number == 1112 %}
+        <p>
+            Henry
+        </p>
+        {% else %}
+        <p>
+            Victor
+        </p>
+        {% endif %}
+    <hr>
+    <p>add value : {{ number|add:"2" }}</p>
+    <p>value : {{ number }}</p>
+    <hr>
+    <p>capfirst : {{ title|capfirst }}</p>
+    <hr>
+    {{ dict_list|dictsort:"age" }}
+    <hr>
+    {{ desc|truncatechars:7 }}
+    
 </body>
 </html>
