--- a/clarusway-full-stack-tr-12-22/django/class-notes/023_ToDoApp/todo/templates/base.html
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/023_ToDoApp/todo/templates/base.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     <h1>ToDo for fs12</h1>
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == "error" %}
+                <div class="alert alert-danger">{{ message }}</div>
+            {% else %}
+                <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+    
     {% block container %}
         
     {% endblock container %}
