--- a/clarusway-full-stack-tr-12-22/django/class-notes/024_PizzaApp/pizzas/templates/pizzas/home.html
+++ b/clarusway-full-stack-tr-12-22/django/class-notes/024_PizzaApp/pizzas/templates/pizzas/home.html
@@ -1,7 +1,23 @@
 {% extends 'pizzas/base.html' %}
-
+{% load static %}
 
 {% block content %}
-    <h1>Home Page</h1>
+ 
+
+    <div class="homeImage">
+        {% if messages %} 
+        {% for message in messages %} 
+            {% if message.tags == "warning" %}
+                <div id="warning" class="message rounded col-md-2">{{ message }}</div>
+            {% else %}
+                <div id="success" class="message rounded col-md-2">{{ message }}</div>
+            {% endif %} 
+        {% endfor %} 
+        {% endif %}
+
+    </div>
+
+        
+
 {% endblock content %}
     
